# PaperCruncher

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
mocks/: mock_connector.py
src/papercruncher/: __init__.py  models.py
src/papercruncher/connectors/: arxiv_connector.py  base.py  connector_arxiv.py  connector_semantic_scholar.py  connectors.py  query.py
src/papercruncher/models/: models.py
tests/: test_arxiv_connector.py  test_base_connector.py  test_connector_semantic_scholar.py  test_tests.py
tests/mocks/: __init__.py  mock_connector.py
