[tool.poetry]
name = "papercruncher"
version = "0.1.0"
description = "Pipeline de síntesis de papers de IA"
authors = ["Mariano Luzuriaga <luzuriagamariano@gmail.com>"]
readme = "README.md"
packages = [{ include = "papercruncher", from = "src" }]
license = "MIT"
homepage = "https://github.com/tuusuario/papercruncher"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.115.12,<0.116.0"
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
requests = "^2.32.4"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
flake8 = "^6.0.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"

